[package]
name = "test-client-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Не хочу писать два отдельных приложения. Одно приложение может запутиться в роли Servr или Client,
# в этом наи поможет crate:
structopt = "0.3"

# Для ассинхронного выполнения кода добавим Tokio. Я беде истользовать только необходимые futures
# для бобее компактного кода и быстрой компиляции:
tokio = { version = "1.12", features = ["rt-multi-thread", "net", "signal", "macros"] }

# Большая часть кода Client/Server реалезована в ctare hyper. Попробуем его использовать:
hyper = {version = "0.14", features = ["http2", "client","server", "runtime"]}

# Для работы с Error добавим crate anyhow:
anyhow = "1.0"